Graph: Code improvement